--- a/Client_App/Views/Controls/SelectReportPopup.axaml
+++ b/Client_App/Views/Controls/SelectReportPopup.axaml
@@ -31,46 +31,74 @@
 					BorderThickness="1"
 					CornerRadius="4"
 					Padding="10">
-				<StackPanel>
-					<TextBlock Text="Выбор отчета"/>
+				<Grid ColumnDefinitions="Auto,Auto">
+					<StackPanel Grid.Column="0" IsVisible="{Binding IsForm1}">
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="1.1" Command="{Binding SetCurrentFormNum}" CommandParameter="1.1"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="1.2" Command="{Binding SetCurrentFormNum}" CommandParameter="1.2"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="1.3" Command="{Binding SetCurrentFormNum}" CommandParameter="1.3"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="1.4" Command="{Binding SetCurrentFormNum}" CommandParameter="1.4"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="1.5" Command="{Binding SetCurrentFormNum}" CommandParameter="1.5"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="1.6" Command="{Binding SetCurrentFormNum}" CommandParameter="1.6"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="1.7" Command="{Binding SetCurrentFormNum}" CommandParameter="1.7"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="1.8" Command="{Binding SetCurrentFormNum}" CommandParameter="1.8"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="1.9" Command="{Binding SetCurrentFormNum}" CommandParameter="1.9"/>
+					</StackPanel>
+					<StackPanel Grid.Column="0" IsVisible="{Binding IsForm2}">
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.1" Command="{Binding SetCurrentFormNum}" CommandParameter="2.1"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.2" Command="{Binding SetCurrentFormNum}" CommandParameter="2.2"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.3" Command="{Binding SetCurrentFormNum}" CommandParameter="2.3"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.4" Command="{Binding SetCurrentFormNum}" CommandParameter="2.4"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.5" Command="{Binding SetCurrentFormNum}" CommandParameter="2.5"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.6" Command="{Binding SetCurrentFormNum}" CommandParameter="2.6"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.7" Command="{Binding SetCurrentFormNum}" CommandParameter="2.7"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.8" Command="{Binding SetCurrentFormNum}" CommandParameter="2.8"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.9" Command="{Binding SetCurrentFormNum}" CommandParameter="2.9"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.10" Command="{Binding SetCurrentFormNum}" CommandParameter="2.10"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.11" Command="{Binding SetCurrentFormNum}" CommandParameter="2.11"/>
+						<Button Margin="0,0,5,0" Width="30" Height="30" Content="2.12" Command="{Binding SetCurrentFormNum}" CommandParameter="2.12"/>
+					</StackPanel>
+					<StackPanel Grid.Column="1" >
+						<TextBlock Text="Выбор отчета"/>
 					
-					<!--Для формы 1.X-->
-					<ListBox
-						IsEnabled="{Binding YearMode, Converter={StaticResource LogicalNotConverter}}"
-						IsVisible="{Binding YearMode, Converter={StaticResource LogicalNotConverter}}"
-						Items="{Binding ReportCollection}"
-						SelectedItem="{Binding SelectedReport, Mode=TwoWay}"
-						SelectionChanged="ListBox_SelectionChanged"
-						SelectionMode="Single">
-						<ListBox.ItemTemplate>
-							<DataTemplate>
-								<TextBlock Height="20" Grid.Column="0">
-									<TextBlock.Text>
-										<MultiBinding StringFormat="{}{0} - {1}">
-											<Binding Path="StartPeriod.Value"/>
-											<Binding Path="EndPeriod.Value"/>
-										</MultiBinding>
-									</TextBlock.Text>
-								</TextBlock>
-							</DataTemplate>
-						</ListBox.ItemTemplate>
-					</ListBox>
-					<!--Для годовых форм 2.X или 4.X-->
-					<ListBox
-						IsEnabled="{Binding YearMode}"
-						IsVisible="{Binding YearMode}"
-						Items="{Binding ReportCollection}"
-						SelectedItem="{Binding SelectedReport, Mode=TwoWay}"
-						SelectionMode="Single">
-						<ListBox.ItemTemplate>
-							<DataTemplate>
-								<TextBlock
-									Height="20" Grid.Column="0"
-									Text="{Binding Year.Value}"/>
-							</DataTemplate>
-						</ListBox.ItemTemplate>
-					</ListBox>
-				</StackPanel>
+						<!--Для формы 1.X-->
+						<ListBox
+							IsEnabled="{Binding YearMode, Converter={StaticResource LogicalNotConverter}}"
+							IsVisible="{Binding YearMode, Converter={StaticResource LogicalNotConverter}}"
+							Items="{Binding ReportCollection}"
+							SelectedItem="{Binding SelectedReport, Mode=TwoWay}"
+							PointerReleased ="ListBox_PointerReleased"
+							SelectionMode="Single">
+							<ListBox.ItemTemplate>
+								<DataTemplate>
+									<TextBlock Height="20" Grid.Column="0">
+										<TextBlock.Text>
+											<MultiBinding StringFormat="{}{0} - {1}">
+												<Binding Path="StartPeriod.Value"/>
+												<Binding Path="EndPeriod.Value"/>
+											</MultiBinding>
+										</TextBlock.Text>
+									</TextBlock>
+								</DataTemplate>
+							</ListBox.ItemTemplate>
+						</ListBox>
+						<!--Для годовых форм 2.X или 4.X-->
+						<ListBox
+							IsEnabled="{Binding YearMode}"
+							IsVisible="{Binding YearMode}"
+							Items="{Binding ReportCollection}"
+							SelectedItem="{Binding SelectedReport, Mode=TwoWay}"
+							PointerReleased ="ListBox_PointerReleased"
+							SelectionMode="Single">
+							<ListBox.ItemTemplate>
+								<DataTemplate>
+									<TextBlock
+										Height="20" Grid.Column="0"
+										Text="{Binding Year.Value}"/>
+								</DataTemplate>
+							</ListBox.ItemTemplate>
+						</ListBox>
+					</StackPanel>
+				</Grid>
 			</Border>
 		</Popup>
 		<Button Command="{Binding SwitchPreviousReportCommand}"
@@ -80,4 +108,5 @@
 			FontSize="48"
 			Content="🠗"/>
 	</StackPanel>
+	
 </UserControl>
