--- a/Client_App/Views/CheckForm.axaml
+++ b/Client_App/Views/CheckForm.axaml
@@ -5,13 +5,13 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:Client_App.ViewModels"
-    xmlns:converterType="clr-namespace:Client_App.Resources.ConverterType"
+    xmlns:behaviors="clr-namespace:Client_App.Behaviors"
     Name="FormCheckerWindow"
     Title="{Binding Path=TitleName, Mode=OneWay}"
-    Width="{Binding Source={x:Type converterType:Width}, Converter={StaticResource RatioConverter}, ConverterParameter='0.45', FallbackValue='500', Mode=OneWay}"
-    Height="{Binding Source={x:Type converterType:Height}, Converter={StaticResource RatioConverter}, ConverterParameter='0.85', FallbackValue='800', Mode=OneWay}"
+    behaviors:WindowScreenSizeBehavior.WidthRatio="0.45"
+    behaviors:WindowScreenSizeBehavior.HeightRatio="0.85"
     x:DataType="vm:CheckFormVM"
-    WindowStartupLocation="CenterScreen"
+    WindowStartupLocation="Manual"
     mc:Ignorable="d">
 
     <Design.DataContext>
