--- a/Client_App/Views/Calculator/ActivityCalculator.axaml
+++ b/Client_App/Views/Calculator/ActivityCalculator.axaml
@@ -5,16 +5,15 @@
         xmlns:vm="clr-namespace:Client_App.ViewModels.Calculator"
         xmlns:m="clr-namespace:Models.DTO;assembly=Models"
         xmlns:converter="clr-namespace:Client_App.Resources.CustomConverters"
-        xmlns:converterType="clr-namespace:Client_App.Resources.ConverterType"
+        xmlns:behaviors="clr-namespace:Client_App.Behaviors"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Client_App.Views.Calculator.ActivityCalculator"
         Icon="/Assets/Radiation_sign.ico"
-        Width="{Binding Source={x:Type converterType:Width}, Converter={StaticResource RatioConverter}, ConverterParameter='0.4', FallbackValue='600', Mode=OneWay}"
-        Height="{Binding Source={x:Type converterType:Height}, Converter={StaticResource RatioConverter}, ConverterParameter='0.5', FallbackValue='800', Mode=OneWay}"
+        behaviors:WindowScreenSizeBehavior.WidthRatio="0.5"
+        behaviors:WindowScreenSizeBehavior.HeightRatio="0.85"
         MinHeight="400"
         MinWidth="650"
-
-        WindowStartupLocation="CenterScreen"
+        WindowStartupLocation="Manual"
         Title="Пересчет активности">
 
     <Design.DataContext>
