Windows sizes and alignment done

--- a/Client_App/Views/Messages/AskIntMessageWindow.axaml
+++ b/Client_App/Views/Messages/AskIntMessageWindow.axaml
@@ -9,12 +9,9 @@
         x:CompileBindings="True"
         x:DataType="vm:AskIntMessageVM"
         Title="Введите число"
-        MinWidth="150"
-        MinHeight="80"
-        d:DesignWidth="180" 
-        d:DesignHeight="120"
-        behaviors:WindowScreenSizeBehavior.WidthRatio="0.15"
-        behaviors:WindowScreenSizeBehavior.HeightRatio="0.08"
+        MinWidth="150" MinHeight="80"
+        d:DesignWidth="180" d:DesignHeight="120"
+        behaviors:WindowScreenSizeBehavior.WidthRatio="0.15" behaviors:WindowScreenSizeBehavior.HeightRatio="0.08"
         WindowStartupLocation="Manual"
 		CanResize="True">
 
