--- a/Client_App/Views/OnStartProgressBar.axaml
+++ b/Client_App/Views/OnStartProgressBar.axaml
@@ -3,24 +3,25 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="using:Client_App.ViewModels"
-        mc:Ignorable="d" 
-        d:DesignWidth="300" 
-        d:DesignHeight="30"
-		Width="300"
-		Height="30"
+        mc:Ignorable="d"
         x:Class="Client_App.Views.OnStartProgressBar"
+        x:DataType="vm:OnStartProgressBarVM"
+        MinWidth="300" MinHeight="30"
+        Width="300" Height="30"
+        d:DesignWidth="300" d:DesignHeight="30"
         SystemDecorations="None"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        CanResize="True">
 
     <Design.DataContext>
         <vm:OnStartProgressBarVM/>
     </Design.DataContext>
 
     <Panel>
-		<ProgressBar  Maximum="100" 
-                      Minimum="0" 
-                      Height="40" 
-                      Value="{Binding OnStartProgressBar, Mode=OneWay}"/>
+		<ProgressBar Maximum="100" 
+                     Minimum="0" 
+                     Height="40" 
+                     Value="{Binding OnStartProgressBar, Mode=OneWay}"/>
 		<TextBlock HorizontalAlignment="Center" 
                    VerticalAlignment="Center" 
                    FontWeight="Bold" 
