--- a/Client_App/Views/Calculator/ActivityCalculator.axaml
+++ b/Client_App/Views/Calculator/ActivityCalculator.axaml
@@ -6,15 +6,17 @@
         xmlns:m="clr-namespace:Models.DTO;assembly=Models"
         xmlns:converter="clr-namespace:Client_App.Resources.CustomConverters"
         xmlns:behaviors="clr-namespace:Client_App.Behaviors"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d"
         x:Class="Client_App.Views.Calculator.ActivityCalculator"
+        x:CompileBindings="True"
+        x:DataType="vm:ActivityCalculatorVM"
+        Title="Пересчет активности"
+        MinHeight="400" MinWidth="500"
+        d:DesignWidth="650" d:DesignHeight="400"
+        behaviors:WindowScreenSizeBehavior.WidthRatio="0.4" behaviors:WindowScreenSizeBehavior.HeightRatio="0.5"
         Icon="/Assets/Radiation_sign.ico"
-        behaviors:WindowScreenSizeBehavior.WidthRatio="0.5"
-        behaviors:WindowScreenSizeBehavior.HeightRatio="0.85"
-        MinHeight="400"
-        MinWidth="650"
         WindowStartupLocation="Manual"
-        Title="Пересчет активности">
+        CanResize="True">
 
     <Design.DataContext>
         <vm:ActivityCalculatorVM/>
