--- a/Client_App/Views/Contacts.axaml
+++ b/Client_App/Views/Contacts.axaml
@@ -3,157 +3,140 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:Client_App.ViewModels"
-        xmlns:converterType="clr-namespace:Client_App.Resources.ConverterType"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        xmlns:behaviors="clr-namespace:Client_App.Behaviors"
+        mc:Ignorable="d" 
         x:Class="Client_App.Views.Contacts"
-        Icon="/Assets/logo.png"
+        x:CompileBindings="True"
+        Title="Контакты"
+        MinWidth="450" MinHeight="450"
+        d:DesignWidth="700" d:DesignHeight="450"
+        behaviors:WindowScreenSizeBehavior.WidthRatio="0.45" behaviors:WindowScreenSizeBehavior.HeightRatio="0.55"
         Background="WhiteSmoke"
-        Width="{Binding Source={x:Type converterType:Width}, Converter={StaticResource RatioConverter}, ConverterParameter='0.4', FallbackValue='600', Mode=OneWay}"
-        Height="{Binding Source={x:Type converterType:Height}, Converter={StaticResource RatioConverter}, ConverterParameter='0.4', FallbackValue='800', Mode=OneWay}"
-        MinHeight="520"
-        MinWidth="600"
-        WindowStartupLocation="CenterScreen"
-        Title="Контакты">
+        Icon="/Assets/logo.png"
+        WindowStartupLocation="Manual"
+        CanResize="True">
 
     <Design.DataContext>
         <vm:BaseVM/>
     </Design.DataContext>
 
-    <Grid 
-        RowDefinitions="0.7*,0.3*" 
-        VerticalAlignment="Top">
-        <HeaderedContentControl
-            Grid.Row="0"
-            Margin="5"
-            MinHeight="300"
-            VerticalAlignment="Top"
-            Header="Техническая поддержка">
+    <Grid RowDefinitions="0.7*,0.3*" 
+          VerticalAlignment="Top">
+        <HeaderedContentControl Grid.Row="0"
+                                Margin="5"
+                                MinHeight="300"
+                                VerticalAlignment="Top"
+                                Header="Техническая поддержка">
             <StackPanel Orientation="Vertical">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock
-                        Margin="10,15,0,10"
-                        FontSize="14"
-                        VerticalAlignment="Top"
-                        Text="По вопросам, связанным с работой программного обеспечения: "/>
-                    <TextBox
-                        Background="Transparent"
-                        BorderThickness="0"
-                        Foreground="Blue"
-                        FontSize="14"
-                        IsReadOnly="True"
-                        Margin="0,11,10,10"
-                        VerticalAlignment="Top"
-                        Text="ciac.support@norao.ru"/>
+                    <TextBlock Margin="10,15,0,10"
+                               FontSize="14"
+                               VerticalAlignment="Top"
+                               Text="По вопросам, связанным с работой программного обеспечения: "/>
+                    <TextBox Background="Transparent"
+                             BorderThickness="0"
+                             Foreground="Blue"
+                             FontSize="14"
+                             IsReadOnly="True"
+                             Margin="0,11,10,10"
+                             VerticalAlignment="Top"
+                             Text="ciac.support@norao.ru"/>
                 </StackPanel>
-                <TextBlock
-                    Margin="10,0,45,10"
-                    FontSize="12"
-                    FontStyle="Italic"
-                    TextWrapping="WrapWithOverflow"
-                    VerticalAlignment="Top"
-                    Text="При обращении, необходимо указать операционную систему (версию сборки, разрядность), версию программного обеспечения. При возникновении ошибок при запуске/установке, приложить файлы Crash.log и Import.log из папки RAO/logs, а также снимок экрана с возникшей ошибкой."/>
+                <TextBlock Margin="10,0,45,10"
+                           FontSize="12"
+                           FontStyle="Italic"
+                           TextWrapping="WrapWithOverflow"
+                           VerticalAlignment="Top"
+                           Text="При обращении, необходимо указать операционную систему (версию сборки, разрядность), версию программного обеспечения. При возникновении ошибок при запуске/установке, приложить файлы Crash.log и Import.log из папки RAO/logs, а также снимок экрана с возникшей ошибкой."/>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock
-                        Margin="10,15,0,10"
-                        FontSize="14"
-                        VerticalAlignment="Top"
-                        Text="По вопросам заполнения форм: "/>
-                    <TextBox
-                        Background="Transparent"
-                        BorderThickness="0"
-                        Foreground="Blue"
-                        FontSize="14"
-                        IsReadOnly="True"
-                        Margin="0,11,10,10"
-                        VerticalAlignment="Top"
-                        Text="ciac.help@norao.ru"/>
+                    <TextBlock Margin="10,15,0,10"
+                               FontSize="14"
+                               VerticalAlignment="Top"
+                               Text="По вопросам заполнения форм: "/>
+                    <TextBox Background="Transparent"
+                             BorderThickness="0"
+                             Foreground="Blue"
+                             FontSize="14"
+                             IsReadOnly="True"
+                             Margin="0,11,10,10"
+                             VerticalAlignment="Top"
+                             Text="ciac.help@norao.ru"/>
                 </StackPanel>
-                <TextBlock
-                    FontSize="12"
-                    FontStyle="Italic"
-                    Margin="10,0,45,10"
-                    TextWrapping="WrapWithOverflow"
-                    VerticalAlignment="Top"
-                    Text="При обращении необходимо указать номер формы/графы, при заполнении которой возникли трудности. Перед обращением настоятельно рекомендуется ознакомиться с приказом №1/13-НПА и НП-067-24."/>
+                <TextBlock FontSize="12"
+                           FontStyle="Italic"
+                           Margin="10,0,45,10"
+                           TextWrapping="WrapWithOverflow"
+                           VerticalAlignment="Top"
+                           Text="При обращении необходимо указать номер формы/графы, при заполнении которой возникли трудности. Перед обращением настоятельно рекомендуется ознакомиться с приказом №1/13-НПА и НП-067-24."/>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock
-                        FontSize="14"
-                        Margin="10,15,0,10"
-                        VerticalAlignment="Top"
-                        Text="Адрес электронной почты обучающего портала: "/>
-                    <TextBox
-                        Background="Transparent"
-                        BorderThickness="0"
-                        Foreground="Blue"
-                        FontSize="14"
-                        IsReadOnly="True"
-                        Margin="0,11,10,0"
-                        VerticalAlignment="Top"
-                        Text="ciac.education@norao.ru"/>
+                    <TextBlock FontSize="14"
+                               Margin="10,15,0,10"
+                               VerticalAlignment="Top"
+                               Text="Адрес электронной почты обучающего портала: "/>
+                    <TextBox Background="Transparent"
+                             BorderThickness="0"
+                             Foreground="Blue"
+                             FontSize="14"
+                             IsReadOnly="True"
+                             Margin="0,11,10,0"
+                             VerticalAlignment="Top"
+                             Text="ciac.education@norao.ru"/>
                 </StackPanel>
-                <TextBlock
-                    FontSize="12"
-                    FontStyle="Italic"
-                    Margin="10,0,45,0"
-                    TextWrapping="WrapWithOverflow"
-                    VerticalAlignment="Top"
-                    Text="По вопросам, связанным с обучением и повышением квалификации."/>
+                <TextBlock FontSize="12"
+                           FontStyle="Italic"
+                           Margin="10,0,45,0"
+                           TextWrapping="WrapWithOverflow"
+                           VerticalAlignment="Top"
+                           Text="По вопросам, связанным с обучением и повышением квалификации."/>
             </StackPanel>
         </HeaderedContentControl>
-        <HeaderedContentControl
-            Grid.Row="1"
-            Margin="5,5,5,0"
-            MinHeight="180"
-            VerticalAlignment="Top"
-            Header="Ссылки">
+        <HeaderedContentControl Grid.Row="1"
+                                Margin="5,5,5,0"
+                                MinHeight="180"
+                                VerticalAlignment="Top"
+                                Header="Ссылки">
             <StackPanel Orientation="Vertical">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock
-                        FontSize="14"
-                        Margin="10,15,0,15"
-                        VerticalAlignment="Top"
-                        Text="Адрес сайта СГУК РВ и РАО: "/>
-                    <TextBox
-                        Background="Transparent"
-                        BorderThickness="0"
-                        Foreground="Blue"
-                        FontSize="14"
-                        IsReadOnly="True"
-                        Margin="0,11,10,15"
-                        VerticalAlignment="Top"
-                        Text="www.norao.ru/sguk/"/>
+                    <TextBlock FontSize="14"
+                               Margin="10,15,0,15"
+                               VerticalAlignment="Top"
+                               Text="Адрес сайта СГУК РВ и РАО: "/>
+                    <TextBox Background="Transparent"
+                             BorderThickness="0"
+                             Foreground="Blue"
+                             FontSize="14"
+                             IsReadOnly="True"
+                             Margin="0,11,10,15"
+                             VerticalAlignment="Top"
+                             Text="www.norao.ru/sguk/"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock
-                        FontSize="14"
-                        Margin="10,15,0,15"
-                        VerticalAlignment="Top"
-                        Text="Программное обеспечение &quot;МПЗФ&quot;: "/>
-                    <TextBox
-                        Background="Transparent"
-                        BorderThickness="0"
-                        Foreground="Blue"
-                        FontSize="14"
-                        IsReadOnly="True"
-                        Margin="0,11,10,15"
-                        VerticalAlignment="Top"
-                        Text="www.norao.ru/sguk/software/mpzf/"/>
+                    <TextBlock FontSize="14"
+                               Margin="10,15,0,15"
+                               VerticalAlignment="Top"
+                               Text="Программное обеспечение &quot;МПЗФ&quot;: "/>
+                    <TextBox Background="Transparent"
+                             BorderThickness="0"
+                             Foreground="Blue"
+                             FontSize="14"
+                             IsReadOnly="True"
+                             Margin="0,11,10,15"
+                             VerticalAlignment="Top"
+                             Text="www.norao.ru/sguk/software/mpzf/"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock
-                        FontSize="14"
-                        Margin="10,15,10,0"
-                        VerticalAlignment="Top"
-                        Text="Нормативные документы: "/>
-                    <TextBox
-                        Background="Transparent"
-                        BorderThickness="0"
-                        Foreground="Blue"
-                        FontSize="14"
-                        IsReadOnly="True"
-                        Margin="0,11,10,0"
-                        VerticalAlignment="Top"
-                        Text="www.norao.ru/sguk/regulations/"/>
+                    <TextBlock FontSize="14"
+                               Margin="10,15,10,0"
+                               VerticalAlignment="Top"
+                               Text="Нормативные документы: "/>
+                    <TextBox Background="Transparent"
+                             BorderThickness="0"
+                             Foreground="Blue"
+                             FontSize="14"
+                             IsReadOnly="True"
+                             Margin="0,11,10,0"
+                             VerticalAlignment="Top"
+                             Text="www.norao.ru/sguk/regulations/"/>
                 </StackPanel>
             </StackPanel>
         </HeaderedContentControl>
