--- a/Client_App/Views/Messages/AskDatePeriodMessageWindow.axaml
+++ b/Client_App/Views/Messages/AskDatePeriodMessageWindow.axaml
@@ -1,83 +1,76 @@
-<Window 
-    xmlns="https://github.com/avaloniaui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="clr-namespace:Client_App.ViewModels.Messages"
-    xmlns:behaviors="clr-namespace:Client_App.Behaviors"
-    mc:Ignorable="d"
-    behaviors:WindowScreenSizeBehavior.WidthRatio="0.25"
-    behaviors:WindowScreenSizeBehavior.HeightRatio="0.2"
-    CanResize="True"
-    x:Class="Client_App.Views.Messages.AskDatePeriodMessageWindow"
-    x:DataType="vm:AskDatePeriodMessageVM"
-    Title="Запрос периода дат"
-    WindowStartupLocation="Manual">
+<Window xmlns="https://github.com/avaloniaui"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="clr-namespace:Client_App.ViewModels.Messages"
+        xmlns:behaviors="clr-namespace:Client_App.Behaviors"
+        mc:Ignorable="d"
+        x:Class="Client_App.Views.Messages.AskDatePeriodMessageWindow"
+        x:CompileBindings="True"
+        x:DataType="vm:AskDatePeriodMessageVM"
+        Title="Запрос периода дат"
+        MinWidth="450" MinHeight="200"
+        d:DesignWidth="450" d:DesignHeight="200"
+        behaviors:WindowScreenSizeBehavior.WidthRatio="0.25" behaviors:WindowScreenSizeBehavior.HeightRatio="0.2"
+        WindowStartupLocation="Manual"
+        CanResize="True">
 
     <Design.DataContext>
         <vm:AskDatePeriodMessageVM/>
     </Design.DataContext>
 
-    <Grid 
-        ColumnDefinitions="0.48*,0.04*,0.48*"
-        RowDefinitions="0.35*,0.35*,0.3*">
-        <TextBlock 
-            Grid.Column="0" 
-            Grid.ColumnSpan="3" 
-            Grid.Row="0"
-            Margin="10"
-            MinHeight="70"
-            TextWrapping="Wrap"
-            Text="Введите период дат, за который необходимо выполнить выгрузку. Если оставить поля незаполненными или заполнить некорректно, то выгрузка будет осуществляться без фильтра по датам."/>
-        <CalendarDatePicker
-            Grid.Column="0"
-            Grid.Row="1"
-            Margin="5"
-            MinWidth="100"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Center"
-            Watermark="дд.мм.гг"
-            Width="150"
-            SelectedDate="{Binding InitialDate, Mode=TwoWay}"/>
-        <TextBlock
-            Grid.Column="1"
-            Grid.Row="1"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Text="－"/>
-        <CalendarDatePicker
-            Grid.Column="2"
-            Grid.Row="1"
-            Margin="5"
-            MinWidth="100"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center"
-            Watermark="дд.мм.гг"
-            Width="150"
-            SelectedDate="{Binding ResidualDate, Mode=TwoWay}"/>
-        <Button 
-            Grid.Row="2"
-            Grid.Column="0"
-            Click="OnOkButtonClicked"
-            Content="Ок"
-            IsDefault="True"
-            HorizontalAlignment="Right"
-            HorizontalContentAlignment="Center"
-            MaxHeight="30"
-            Margin="0,5"
-            VerticalContentAlignment="Center"
-            Width="75"
-            />
-        <Button
-            Grid.Row="2"
-            Grid.Column="2"
-            Click="OnCancelButtonClicked"
-            IsCancel="True"
-            HorizontalAlignment="Left"
-            HorizontalContentAlignment="Center"
-            MaxHeight="30"
-            Margin="0,5"
-            Width="75"
-            Content="Отмена"/>
+    <Grid ColumnDefinitions="0.48*,0.04*,0.48*"
+          RowDefinitions="0.35*,0.35*,0.3*">
+        <TextBlock Grid.Column="0" 
+                   Grid.ColumnSpan="3" 
+                   Grid.Row="0"
+                   Margin="10"
+                   MinHeight="70"
+                   TextWrapping="Wrap"
+                   Text="Введите период дат, за который необходимо выполнить выгрузку. Если оставить поля незаполненными или заполнить некорректно, то выгрузка будет осуществляться без фильтра по датам."/>
+        <CalendarDatePicker Grid.Column="0"
+                            Grid.Row="1"
+                            Margin="5"
+                            MinWidth="100"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            Watermark="дд.мм.гг"
+                            Width="150"
+                            SelectedDate="{Binding InitialDate, Mode=TwoWay}"/>
+        <TextBlock Grid.Column="1"
+                   Grid.Row="1"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Text="－"/>
+        <CalendarDatePicker Grid.Column="2"
+                            Grid.Row="1"
+                            Margin="5"
+                            MinWidth="100"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Watermark="дд.мм.гг"
+                            Width="150"
+                            SelectedDate="{Binding ResidualDate, Mode=TwoWay}"/>
+        <Button Grid.Row="2"
+                Grid.Column="0"
+                Click="OnOkButtonClicked"
+                Content="Ок"
+                IsDefault="True"
+                HorizontalAlignment="Right"
+                HorizontalContentAlignment="Center"
+                MaxHeight="30"
+                Margin="0,5"
+                VerticalContentAlignment="Center"
+                Width="75"/>
+        <Button Grid.Row="2"
+                Grid.Column="2"
+                Click="OnCancelButtonClicked"
+                IsCancel="True"
+                HorizontalAlignment="Left"
+                HorizontalContentAlignment="Center"
+                MaxHeight="30"
+                Margin="0,5"
+                Width="75"
+                Content="Отмена"/>
     </Grid>
 </Window>
