--- a/Client_App/Views/Messages/GetRegionAndFormNums.axaml
+++ b/Client_App/Views/Messages/GetRegionAndFormNums.axaml
@@ -9,12 +9,9 @@
         x:CompileBindings="True"
         x:DataType="vm:GetRegionAndFormNumsVM"
         Title="Запрос региона и номеров форм"
-        MinWidth="300"
-        MinHeight="400"
-        d:DesignWidth ="420"
-        d:DesignHeight ="500"
-        behaviors:WindowScreenSizeBehavior.WidthRatio="0.25"
-        behaviors:WindowScreenSizeBehavior.HeightRatio="0.55"
+        MinWidth="300" MinHeight="400"
+        d:DesignWidth ="420" d:DesignHeight ="500"
+        behaviors:WindowScreenSizeBehavior.WidthRatio="0.25" behaviors:WindowScreenSizeBehavior.HeightRatio="0.55"
         WindowStartupLocation="Manual"
         CanResize="True">
 
