--- a/Client_App/Views/RowNumber.axaml
+++ b/Client_App/Views/RowNumber.axaml
@@ -3,12 +3,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        MinHeight="100" MinWidth="250"
-        MaxHeight="100"
-        MaxWidth="250"
-        Width="250"
-        Height="100"
         x:Class="Client_App.Views.RowNumber"
+        MinWidth="250" MinHeight="100"
+        MaxWidth="250" MaxHeight="100"
+        Width="250" Height="100"
         Name="RowNumber"
         Icon="/Assets/logo.png"
         Title="{Binding WindowHeader}"
