--- a/Client_App/Views/RowNumberIn.axaml
+++ b/Client_App/Views/RowNumberIn.axaml
@@ -3,12 +3,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        MinHeight="130" MinWidth="350"
-        MaxHeight="130"
-        MaxWidth="300"
-        Width="300"
-        Height="150"
         x:Class="Client_App.Views.RowNumberIn"
+        MinWidth="350" MinHeight="130"
+        MaxWidth="300" MaxHeight="130"
+        Width="300" Height="150"
         Name="RowNumberIn"
         Icon="/Assets/logo.png"
         Title="{Binding WindowHeader}"
