--- a/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
@@ -13,12 +13,15 @@
 	<UserControl.Resources>
 		<converter:IfNullShowAnotherValue x:Key="IfNullShowAnotherValue"/>
 	</UserControl.Resources>
+
+    <Design.DataContext>
+        <vm:Forms1TabControlVM/>
+    </Design.DataContext>
 	
 	<Border Classes="borderContainer">
 		<Grid RowDefinitions="*,*" ColumnDefinitions="5*,3*" >
 			<Grid Grid.Row ="0" Grid.Column="0" RowDefinitions="Auto,*,Auto">
 				<TextBox Text="{Binding SearchText}" Grid.Row="0" Margin="5" Watermark ="Поиск..." />
-				<!--Ошибка в этом DataGrid-->
 				<DataGrid
 						  Grid.Row="1" Margin="5"
 						  Items="{Binding ReportsCollection}"
@@ -136,19 +139,19 @@
 						<TextBlock
 							Text="{Binding TotalPagesOrgs}"
 							Grid.Row="0" Grid.Column="3" Margin="5"/>
-						<TextBlock Text="Кол-во строчек на странице"
+						<TextBlock Text="Кол-во орг. на странице"
 							Grid.Row="1" Grid.Column="0" Margin="5"/>
 						<controls:NumericLeftRight
 							Value="{Binding RowsCountOrgs}"
 							Grid.Row="1" Grid.Column="1" Margin="5"
 							Minimum="1"/>
-						<TextBlock Text="Кол-во строчек:"
+						<TextBlock Text="Всего орг.:"
 							Grid.Row="1" Grid.Column="2" Margin="5"/>
 						<TextBlock
 							Text="{Binding TotalRowsOrgs}"
 							Grid.Row="1" Grid.Column="3" Margin="5"/>
 
-						<TextBlock Text="Кол-во отчетов:"
+						<TextBlock Text="Всего отчетов:"
 							Grid.Row="1" Grid.Column="4" Margin="5"/>
 						<TextBlock Text="{Binding TotalReportCount}"
 							Grid.Row="1" Grid.Column="5" Margin="5"/>
