--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -393,6 +393,9 @@
 				<TabItem x:Name="Forms4" Header="Формы 4" IsVisible="True">
 					<tabs:Forms4TabControl DataContext="{Binding Forms4TabControlVM}"/>
 			    </TabItem>
+				<TabItem x:Name="Forms5" Header="Формы 5" IsVisible="True">
+					<tabs:Forms5TabControl DataContext="{Binding Forms5TabControlVM}"/>
+				</TabItem>
             </TabControl>
         </Panel>
 
